--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" id="MathJax-script" async
             src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-</script>
+    </script>
 
 </head>
 <body id="body">
@@ -55,7 +55,8 @@
              data-bs-parent="#BigDad">
             Привет, скорее всего ты здесь первый раз, поэтому давай введу тебя в курс дела. Выше ты уже можешь увидеть
             матрицу 3х3 и возможность изменения её размера. Советую пока не делать матрицу слишком большой, тебе долго
-            вводить и я не обработал ошибку дизайна. Но вернёмся к теме, тебе надо ввести значения элементов матрицы, а
+            вводить и это будет решаться очень долго, ну мои функции пока не очень эффективны(с 5 начинает думать больше
+            минуты). Но вернёмся к теме, тебе надо ввести значения элементов матрицы, а
             мой сайт вычислит обратную матрицу и покажет тебе подробное решение.
         </div>
     </div>
@@ -68,7 +69,8 @@
 <script>
     var last_num_numbers = 3;
     var last_check = 0;
-    function decide(){
+
+    function decide() {
         let array = []
         let result_matrix = []
         let colsNum = document.getElementById("-1").value
@@ -92,23 +94,24 @@
         det = det[0]
         let text = "$$\\displaylines{\\Delta = "
         text += "\\begin{vmatrix} "
-        if (array.length >= 4){
+        if (array.length >= 4) {
             document.getElementById("body").style.maxWidth = "none";
             document.getElementById("body").style.width = "auto";
             document.getElementById("body").style.overflow = "auto";
+            document.getElementById("body").style.height = "auto";
         }
-        if (det === 0){
+        if (det === 0) {
             alert("Определитель равен нулю, решения нет.")
             return null
         }
-        for (let i = 0; i < array.length; i++){
+        for (let i = 0; i < array.length; i++) {
             result_matrix.push([])
             text += array[i].join(" & ") + " \\\\ "
-            if (i % 3 == 2){
+            if (i % 3 == 2 || array.length >= 4) {
                 ar_comp += "\\\\"
             }
             ar_comp += "\\begin{split}"
-            for (let j = 0; j < array[i].length; j++){
+            for (let j = 0; j < array[i].length; j++) {
                 let new_arr = JSON.parse(JSON.stringify(array));
                 for (let g = 0; g < array.length; g++) {
                     new_arr[g].splice(j, 1)
@@ -122,10 +125,10 @@
 
         }
         text += "\\end{vmatrix} = " + string + " = " + det + "\\\\" + ar_comp + " \\\\\\ A^{-1} =" + det + " \\cdot \\begin{pmatrix}"
-        for (let i = 0; i < result_matrix.length; i++){
-            for (let j = 0; j < result_matrix.length; j++){
+        for (let i = 0; i < result_matrix.length; i++) {
+            for (let j = 0; j < result_matrix.length; j++) {
                 text += result_matrix[j][i]
-                if (j !== result_matrix.length - 1){
+                if (j !== result_matrix.length - 1) {
                     text += " & "
                 }
             }
@@ -135,30 +138,29 @@
         console.log(text)
         document.getElementById("result").innerText = text
         MathJax.typeset()
-        document.getElementById("body").style.height = "auto";
     }
 
-    function determinant(array){
+    function determinant(array) {
         let result = 0
         let new_arr = JSON.parse(JSON.stringify(array));
         let text = ""
-        if (array.length === 2){
+        if (array.length === 2) {
             text += "\\begin{vmatrix}"
-            for (let i = 0; i < array.length; i++){
+            for (let i = 0; i < array.length; i++) {
                 text += array[i].join(" & ") + "\\\\"
             }
             text += "\\end{vmatrix}"
             return [array[0][0] * array[1][1] - array[0][1] * array[1][0], text]
         }
-        for (let i = 0; i < array.length; i++){
+        for (let i = 0; i < array.length; i++) {
             new_arr = JSON.parse(JSON.stringify(array));
             for (let g = 0; g < array.length; g++) {
                 new_arr[g].splice(i, 1)
             }
             new_arr.splice(0, 1)
             let det = determinant(new_arr)
-            if (i !== 0 && i !== array.length - 1){
-                if (text.length - last_check > 10){
+            if (i !== 0 && i !== array.length - 1) {
+                if (text.length - last_check > 10) {
                     text += "\\\\"
                     last_check = text.length;
                 }
